# QC-P-backend-

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  dashboard.py  files.py  items.py  knowledge_base.py  projects.py  templates.py  users.py
app/core/: config.py  security.py
app/crud/: crud_dashboard.py  crud_history.py  crud_item.py  crud_knowledge_base.py  crud_project.py  crud_template.py  crud_user.py
app/db/: base.py  models.py  session.py
app/schemas/: dashboard.py  history.py  item.py  knowledge_base.py  project.py  template.py  token.py  user.py
migrations/: env.py
migrations/versions/: 2c7143d15e92_create_users_table.py  728654bca386_create_projects_table.py  93ec71955220_create_items_table.py
